--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <a href=""><img src="img/Face2.png" alt=""></a>
             </div>
         </div>
+        <div class="center">
+            <div class="texto-sobre"><h1>Seja Bem-Vindo a <br> <span style="color: darkorchid;">Quantum Secure Labs</span> </h1></div>
+        </div>
     </section>
 </body>
 
