--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             </div>
             <div class="social-media">
                 <a href=""><img src="img/Insta2.png" alt=""></a>
-                <a href=""><img src="img/Twitter2.png" alt=""></a>
+                <a href=""><img src="img/Twitter3.png" alt=""></a>
                 <a href=""><img src="img/Face2.png" alt=""></a>
             </div>
         </div>
         <div class="center">
-            <div class="texto-sobre"><h1>Seja Bem-Vindo a <br> <span style="color: darkorchid;">Quantum Secure Labs</span> </h1></div>
+            <div class="texto-sobre">
+                <h1>Seja Bem-Vindo a <br> <span style="color: darkorchid;">Quantum Secure Labs</span> </h1></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce in orci quam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris quis velit lectus. Quisque eu urna fermentum, imperdiet orci ac, venenatis ipsum. Integer vulputate lacus leo, commodo laoreet libero imperdiet eu. Vestibulum dapibus scelerisque lectus nec vestibulum. Duis vitae mauris et sem mollis lacinia id vitae justo. Duis sed dui purus. Donec venenatis malesuada ex et scelerisque. Fusce rutrum vulputate nisi, nec ornare velit. Maecenas sed metus sit amet nulla gravida euismod. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vitae consequat est, finibus accumsan enim. Cras fringilla, urna vel rutrum posuere, ante justo eleifend sapien, ut pretium orci ligula vitae sapien.</p>
         </div>
     </section>
 </body>
