--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="center">
             <div class="logo"><img src="img/Nome 3.png" alt="Quantum_logo" class="Quantum_logo"></div>
             <div class="menu">
-                <a href="#">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="#">Sobre</a>
                 <a href="#">Planos</a>
                 <a href="#">Quem somos?</a>
