--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <div class="logo"><img src="img/Nome 3.png" alt="Quantum_logo" class="Quantum_logo"></div>
             <div class="menu">
                 <a href="index.html">Inicio</a>
-                <a href="#">Sobre</a>
                 <a href="#">Planos</a>
                 <a href="#">Quem somos?</a>
             </div>
@@ -32,8 +31,10 @@
         </div>
         <div class="center">
             <div class="texto-sobre">
-                <h1>Seja Bem-Vindo a <br> <span style="color: darkorchid;">Quantum Secure Labs</span> </h1></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce in orci quam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris quis velit lectus. Quisque eu urna fermentum, imperdiet orci ac, venenatis ipsum. Integer vulputate lacus leo, commodo laoreet libero imperdiet eu. Vestibulum dapibus scelerisque lectus nec vestibulum. Duis vitae mauris et sem mollis lacinia id vitae justo. Duis sed dui purus. Donec venenatis malesuada ex et scelerisque. Fusce rutrum vulputate nisi, nec ornare velit. Maecenas sed metus sit amet nulla gravida euismod. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vitae consequat est, finibus accumsan enim. Cras fringilla, urna vel rutrum posuere, ante justo eleifend sapien, ut pretium orci ligula vitae sapien.</p>
+                <h1>Bem-vindos ao <br> Universo Cibernético Blindado da <br> <span style="color: darkorchid;font-family: 'Oswald', sans-serif;">Quantum Secure Labs!</span> 🚀🔒 </h1>
+                <p>Você já se perguntou como seria viver em um mundo onde seus dados estão tão seguros que até mesmo os hackers têm dificuldade em marcar presença? Na Quantum Secure Labs, transformamos essa utopia em realidade!</p>
+                <button>Saiba mais</button>
+            </div>
         </div>
     </section>
 </body>
