--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="menu">
                 <a href="index.html">Inicio</a>
                 <a href="#">Planos</a>
-                <a href="#">Quem somos?</a>
+                <a href="assets/quemsomos.html">Quem somos?</a>
             </div>
         </div>
     </header>
