--- a/assets/quemsomos.html
+++ b/assets/quemsomos.html
@@ -1,8 +1,22 @@
 <html>
 <head>
-    <title>Quem somos?</title>
+    <title>QuantumSecure Labs</title>
+    <link rel="shortcut icon" href="/img/Roxo Simples.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximun-scale=1.0">
 </head>
+
 <body>
-    
+    <header>
+        <div class="center">
+            <div class="logo"><img src="/img/Nome 3.png" alt="Quantum_logo" class="Quantum_logo"></div>
+            <div class="menu">
+                <a href="../index.html">Inicio</a>
+                <a href="#">Planos</a>
+                <a href="assets/quemsomos.html">Quem somos?</a>
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
