--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="texto-sobre">
                 <h1>Bem-vindos ao <br> Universo Cibernético Blindado da <br> <span style="color: darkorchid;font-family: 'Oswald', sans-serif;">Quantum Secure Labs!</span> 🚀🔒 </h1>
                 <p>Você já se perguntou como seria viver em um mundo onde seus dados estão tão seguros que até mesmo os hackers têm dificuldade em marcar presença? Na Quantum Secure Labs, transformamos essa utopia em realidade!</p>
-                <button>Saiba mais</button>
+                <button><a href="assets/quemsomos.html">Saiba mais</a></button>
             </div>
         </div>
     </section>
