--- a/assets/quemsomos.html
+++ b/assets/quemsomos.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>QuantumSecure Labs</title>
     <link rel="shortcut icon" href="/img/Roxo Simples.png" type="image/x-icon">
@@ -17,6 +18,50 @@
             </div>
         </div>
     </header>
+    <div class="slider">
+        <div class="slides">
+            <!--Radio buttons-->
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+            <!--Fim Radio buttons-->
+
+            <!--Slide images-->
+            <div class="slide1">
+                <img src="#" alt="Imagem 1">
+            </div>
+
+            <div class="slide2">
+                <img src="#" alt="Imagem 2">
+            </div>
+
+            <div class="slide3">
+                <img src="#" alt="Imagem 3">
+            </div>
+
+            <div class="slide4">
+                <img src="#" alt="Imagem 4">
+            </div>
+            <!--Fim slide images-->
+
+            <!--Navigation auto-->
+            <div class="navigation-auto">
+                <div class="auto-btn1"></div>
+                <div class="auto-btn2"></div>
+                <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
+            </div>
+
+            <div class="manual-navigation">
+                <label for="radio1"></label>
+                <label for="radio2"></label>
+                <label for="radio3"></label>
+                <label for="radio4"></label>
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
