--- a/assets/quemsomos.html
+++ b/assets/quemsomos.html
@@ -18,6 +18,7 @@
             </div>
         </div>
     </header>
+    <h1>Quem somos?</h1>
     <div class="slider">
         <div class="slides">
             <!--Radio buttons-->
@@ -28,20 +29,20 @@
             <!--Fim Radio buttons-->
 
             <!--Slide images-->
-            <div class="slide1">
-                <img src="#" alt="Imagem 1">
+            <div class="slide_1">
+                <img src="/img/11.png" alt="Imagem 1">
             </div>
 
-            <div class="slide2">
-                <img src="#" alt="Imagem 2">
+            <div class="slide_2">
+                <img src="/img/16.png" alt="Imagem 2">
             </div>
 
-            <div class="slide3">
-                <img src="#" alt="Imagem 3">
+            <div class="slide_3">
+                <img src="/img/9 (1).png" alt="Imagem 3">
             </div>
 
-            <div class="slide4">
-                <img src="#" alt="Imagem 4">
+            <div class="slide_4">
+                <img src="/img/4 (1).png" alt="Imagem 4">
             </div>
             <!--Fim slide images-->
 
@@ -54,10 +55,10 @@
             </div>
 
             <div class="manual-navigation">
-                <label for="radio1"></label>
-                <label for="radio2"></label>
-                <label for="radio3"></label>
-                <label for="radio4"></label>
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+                <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
             </div>
 
         </div>
