--- a/assets/quemsomos.html
+++ b/assets/quemsomos.html
@@ -62,6 +62,18 @@
 
         </div>
     </div>
+    
+    <div class="texto1">
+        <h2>🔐 O Nosso Escudo <span style="color: darkorchid;">Quântico</span>: Segurança Além da Imaginação</h2>
+
+        <p>Imagina uma barreira de segurança tão impenetrável que até mesmo um algoritmo tentaria desistir.<br>
+            Na <span style="color: darkorchid;">Quantum</span> Secure Labs,elevamos a proteção de dados a níveis cósmicos,
+            com um toque de tecnologia quântica.<br> 
+            Seus dados estão mais seguros do que um tesouro intergaláctico!
+        </p>
+    </div>
+
+    <script src="/script/script.js"></script>
 </body>
 
 </html>
