--- a/assets/quemsomos.html
+++ b/assets/quemsomos.html
@@ -17,62 +17,75 @@
             </div>
         </div>
     </header>
-    <h1>Quem somos?</h1>
-    <div class="slider">
-        <div class="slides">
-            <!--Radio buttons-->
-            <input type="radio" name="radio-btn" id="radio1">
-            <input type="radio" name="radio-btn" id="radio2">
-            <input type="radio" name="radio-btn" id="radio3">
-            <input type="radio" name="radio-btn" id="radio4">
-            <!--Fim Radio buttons-->
+    <br><br>
+    <section>
+        <br><br>
+        <h1 style="background-image: url(/img/giphy.gif);background-repeat: no-repeat;background-position: center; background-size: auto;">Quem é a <span style="color: darkorchid;">Quantum</span>?</h1>
+        <br><br>
+        <div class="slider">
+            <div class="slides">
+                <!--Radio buttons-->
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+                <input type="radio" name="radio-btn" id="radio4">
+                <!--Fim Radio buttons-->
 
-            <!--Slide images-->
-            <div class="slide_1">
-                <img src="/img/11.png" alt="Imagem 1">
+                <!--Slide images-->
+                <div class="slide_1">
+                    <img src="/img/11.png" alt="Imagem 1">
+                </div>
+
+                <div class="slide_2">
+                    <img src="/img/16.png" alt="Imagem 2">
+                </div>
+
+                <div class="slide_3">
+                    <img src="/img/9 (1).png" alt="Imagem 3">
+                </div>
+
+                <div class="slide_4">
+                    <img src="/img/4 (1).png" alt="Imagem 4">
+                </div>
+                <!--Fim slide images-->
+
+                <!--Navigation auto-->
+                <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                </div>
+
+                <div class="manual-navigation">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+
             </div>
-
-            <div class="slide_2">
-                <img src="/img/16.png" alt="Imagem 2">
-            </div>
-
-            <div class="slide_3">
-                <img src="/img/9 (1).png" alt="Imagem 3">
-            </div>
-
-            <div class="slide_4">
-                <img src="/img/4 (1).png" alt="Imagem 4">
-            </div>
-            <!--Fim slide images-->
-
-            <!--Navigation auto-->
-            <div class="navigation-auto">
-                <div class="auto-btn1"></div>
-                <div class="auto-btn2"></div>
-                <div class="auto-btn3"></div>
-                <div class="auto-btn4"></div>
-            </div>
-
-            <div class="manual-navigation">
-                <label for="radio1" class="manual-btn"></label>
-                <label for="radio2" class="manual-btn"></label>
-                <label for="radio3" class="manual-btn"></label>
-                <label for="radio4" class="manual-btn"></label>
-            </div>
-
         </div>
-    </div>
-    
-    <div class="texto1">
-        <h2>🔐 O Nosso Escudo <span style="color: darkorchid;">Quântico</span>: Segurança Além da Imaginação</h2>
-
-        <p>Imagina uma barreira de segurança tão impenetrável que até mesmo um algoritmo tentaria desistir.<br>
-            Na <span style="color: darkorchid;">Quantum</span> Secure Labs,elevamos a proteção de dados a níveis cósmicos,
-            com um toque de tecnologia quântica.<br> 
-            Seus dados estão mais seguros do que um tesouro intergaláctico!
-        </p>
-    </div>
-
+        <br><br><br>
+        <div class="texto1">
+            <h2>🔐 O Nosso Escudo <span style="color: darkorchid;">Quântico</span>: Segurança Além da Imaginação</h2>
+            <br>
+            <p> Imagina uma barreira de segurança tão impenetrável que até mesmo um algoritmo tentaria desistir.<br>
+                Na <span style="color: darkorchid;">Quantum</span> Secure Labs,elevamos a proteção de dados a níveis
+                cósmicos,com um toque de tecnologia quântica.<br>
+                Seus dados estão mais seguros do que um tesouro intergaláctico!
+            </p>
+        </div>
+        <br><br>
+        <div class="texto2">
+            <h2>💡<span style="color: darkorchid;">Inovação</span> que Desafia a Gravidade</h2>
+            <br>
+            <p> Na nossa missão <span style="color: darkorchid;">intergaláctica</span> pela segurança, desafiamos constantemente as leis da cibernética.<br>
+                Somos a equipe que transforma zeros e uns em um balé digital que até os vírus desejariam participar.<br> 
+                <span style="color: darkorchid;">Inovação</span> é a nossa moeda e o futuro é a nossa galáxia de possibilidades!
+            </p>
+        </div>
+    </section>
     <script src="/script/script.js"></script>
 </body>
 
