--- a/assets/quemsomos.html
+++ b/assets/quemsomos.html
@@ -69,7 +69,8 @@
         <div class="texto1">
             <h2>🔐 O Nosso Escudo <span style="color: darkorchid;">Quântico</span>: Segurança Além da Imaginação</h2>
             <br>
-            <p> Imagina uma barreira de segurança tão impenetrável que até mesmo um algoritmo tentaria desistir.<br>
+            <p> 
+                Imagina uma barreira de segurança tão impenetrável que até mesmo um algoritmo tentaria desistir.<br>
                 Na <span style="color: darkorchid;">Quantum</span> Secure Labs,elevamos a proteção de dados a níveis
                 cósmicos,com um toque de tecnologia quântica.<br>
                 Seus dados estão mais seguros do que um tesouro intergaláctico!
@@ -79,10 +80,33 @@
         <div class="texto2">
             <h2>💡<span style="color: darkorchid;">Inovação</span> que Desafia a Gravidade</h2>
             <br>
-            <p> Na nossa missão <span style="color: darkorchid;">intergaláctica</span> pela segurança, desafiamos constantemente as leis da cibernética.<br>
+            <p> 
+                Na nossa missão <span style="color: darkorchid;">intergaláctica</span> pela segurança, desafiamos constantemente as leis da cibernética.<br>
                 Somos a equipe que transforma zeros e uns em um balé digital que até os vírus desejariam participar.<br> 
                 <span style="color: darkorchid;">Inovação</span> é a nossa moeda e o futuro é a nossa galáxia de possibilidades!
             </p>
+        </div>
+        <br><br>
+        <div class="texto3">
+            <h2>🚀 Navegue pela <span style="color: darkorchid;">Via Láctea</span> Sem Preocupações</h2>
+            <br>
+            <p> 
+                Com a <span style="color: darkorchid;">Quantum Secure Labs</span>,você pode navegar pelos cosmos da internet sem medo de ficar perdido em buracos negros de ciberameaças.<br>
+                Criamos um GPS digital que não apenas orienta,mas também defende seus dados como uma nave espacial protegida por escudos impenetráveis.
+            </p>
+        </div>
+        <br><br>
+        <div class="texto4">
+            <h2>🌌 O Nosso Universo é <span style="color: darkorchid;">Cibernético</span>, mas Nunca Frio!</h2>
+            <br>
+            <p> 
+                Na Quantum Secure Labs, <span style="color: darkorchid;">acreditamos</span> que a segurança não precisa ser fria e impessoal. <br>
+                Nossa equipe de experts em segurança é como uma <span style="color: darkorchid;">família</span> galáctica que está sempre pronta para defender seu espaço digital. <br>
+                Estamos aqui para <span style="color: darkorchid;">acolher</span>, proteger e garantir que seus dados estejam tão seguros <br> quanto um planeta guardado por uma frota de naves estelares.
+            </p>
+        </div>
+        <div class="texto5">
+            <h1>Seja bem-vindo ao <span style="color: darkorchid;">Quantum Secure Labs</span>, onde a segurança de dados não é apenas um serviço, é uma experiência interplanetária! 🔒🚀</h1>
         </div>
     </section>
     <script src="/script/script.js"></script>
