--- a/assets/quemsomos.html
+++ b/assets/quemsomos.html
@@ -13,7 +13,7 @@
             <div class="logo"><img src="/img/Nome 3.png" alt="Quantum_logo" class="Quantum_logo"></div>
             <div class="menu">
                 <a href="../index.html">Inicio</a>
-                <a href="assets/quemsomos.html">Quem somos?</a>
+                <a href="#">Quem somos?</a>
             </div>
         </div>
     </header>
@@ -105,8 +105,8 @@
                 Estamos aqui para <span style="color: darkorchid;">acolher</span>, proteger e garantir que seus dados estejam tão seguros <br> quanto um planeta guardado por uma frota de naves estelares.
             </p>
         </div>
-        <div class="texto5">
-            <h1>Seja bem-vindo ao <span style="color: darkorchid;">Quantum Secure Labs</span>, onde a segurança de dados não é apenas um serviço, é uma experiência interplanetária! 🔒🚀</h1>
+        <div class="texto5" style="background-color: darkorchid;">
+            <h1>Seja bem-vindo ao <span style="color: black;">Quantum Secure Labs</span>, onde a segurança de dados não é apenas um serviço, é uma experiência interplanetária! 🔒🚀</h1>
         </div>
     </section>
     <script src="/script/script.js"></script>
