--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="img/Logo 1.png" alt="" class="foto"> 
             </div>
             <div class="social-media">
-                <a href=""><img src="img/Insta2.png" alt=""></a>
+                <a href="https://www.instagram.com/quantumsecure_labs/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="><img src="img/Insta2.png" alt=""></a>
                 <a href=""><img src="img/Twitter3.png" alt=""></a>
                 <a href=""><img src="img/Face2.png" alt=""></a>
             </div>
